--- a/index.html
+++ b/index.html
@@ -2,17 +2,96 @@
 
 <html lang="en">
 <head>
-This is the HEAD
+  <meta charset="utf-8">
+  <title>Assigment One</title>
+   <body style="background-color:Aliceblue;">
+     <span style ="font-family: sans-serif">
+  <meta name="Anthony Thomas" content="s3383776">
+  <link rel="stylesheet" href="style/style.css">
 </head>
-
 <body>
+	<div class="wrapper">
+			<header id="myHeader">
+        <p style="color:#993B27" >Anthony Thomas, s3383776</p>
+			</header>
+      <center>
+    <h1>Introduction to Information Technology </h1>
+    <h1>Assignment One: My Profile</h1>
+   </center>
 
+		<div id="main">
+			<section id="intro">
+			<header class="sectionHeading">
+				<h2></h2>
+			</header>
+
+			</section>
+
+        <center>
+				<h2 style="color:#993B27"> My Background</h2>
+      </center>
+
+			</header>
+      <section>
+<img class= "purebeauty" src="Images/purebeauty.png" style = "float: right" >
+        <h3>Interest in Information Technology</h3>
+					<p>My interest in IT started in a rather indirect way and was not a very direct path. In 2012, I started studying an Associate Degree in Mechanical Engineering at RMIT after graduating high school. After initially deciding I immensely disliked Mechanical Engineering, I decided to double down and start yet another Associate degree in Civil  Engineering. I graduated after four years with two Engineering Degrees, and by this point, I had confirmed that Engineering was probably not something I enjoyed.</p>
+					<p></p>
+				</section>
+				<section>
+					<h3>Ideal Job</h3>
+					<p> Ideal Job </p>
+				</section>
+
+				<section>
+					<h3>Personal Profile</h3>
+					<p>Oersonal Profile Stuff </p>
+				</section>
+			</section>
+
+      <center>
+      <h2 style="color:#993B27"> Project Idea</h2>
+    </center>
+
+    </header>
+    <section>
+      <h3>Overview and Motivation</h3>
+      <img class= "BitcoinPeakPrice" src="Images/BitcoinPeak.png" style = "float: left" >
+
+
+        <p>My interest in IT started in a rather indirect way and was not a very direct path. In 2012, I started studying an Associate Degree in Mechanical Engineering at RMIT after graduating high school. After initially deciding I immensely disliked Mechanical Engineering, I decided to double down and start yet another Associate degree in Civil  Engineering. I graduated after four years with two Engineering Degrees, and by this point, I had confirmed that Engineering was probably not something I enjoyed.  </p>
+
+      </section>
+      <section>
+        <h3>Description and Limitations</h3>
+        <p> Description and Limitations</p>
+      </section>
+
+      <section>
+        <h3>Tools Technologies and Skill Required </h3>
+        <p>Tools Technologies and Skill Required </p>
+      </section>
+    </section>
+    <section>
+      <h3>Outcome </h3>
+      <p> Outcome stuff </p>
+    </section>
+  </section>
+
+  <center>
+  <h2 style="color:#993B27"> Refrences and Acknoledgments  </h2>
+</center>
+<h3>Refrences  </h3>
+<p> Coinbase.com. 2020. Bitcoin Price Chart (BTC) | Coinbase. [online] Available at: <a herf= "https://www.coinbase.com/price/bitcoinand" /a> [Accessed 15 August 2020]. </p>
+  <p> Kaspersky.com. 2020. Uncharted Territory: Why Consumers Are Still Wary About Adopting Cryptocurrency. [online] Available at: <https://www.kaspersky.com/blog/cryptocurrency-report-2019/> [Accessed 15 August 2020]. </p>
+  <p>  2020. POMP Podcast 270. [online] Available at: <https://www.youtube.com/watch?v=Dz0uoaqyx44> [Accessed 15 August 2020]. </p>
+    <p> Locke, T., 2020. Mark Cuban: This Is What It Would Take For Me To Change My Mind About Bitcoin. [online] CNBC. Available at: <https://www.cnbc.com/2020/04/15/what-it-would-take-for-mark-cuban-to-change-his-mind-about-bitcoin.html> [Accessed 15 August 2020]. </p>
+      <p>  Au.indeed.com. 2020. Full Stack Developer | .NET | Python - Melbourne VIC 3030 - Indeed.Com. [online] Available at: <https://au.indeed.com/viewjob?cmp=New-Market-Leader&t=Full+Stack+Developer+Net+Python&jk=e80aedd8f3e52a82&sjdu=8EWtruxy728tzxKcUmN0cbCMTN6TBlbqwSiHGWKXUH1qIUFctEsMxW-LDDbvfupW7pYqY_NpKuWR3wbtrpDDWNYCg6Ze9YLKcjSUekXKlCI&tk=1efatj67285gs800&adid=345485660&pub=4a1b367933fd867b19b072952f68dceb&vjs=3> [Accessed 15 August 2020]. </p>
+        <p> Mallory. 2020. Information Technology Jobs Descriptions. [online] Available at: <https://mallory.com.au/information-technology-jobs-descriptions/> [Accessed 15 August 2020]. </p>
+		<footer>
+<p style="color:#993B27" >Anthony Thomas, s3383776</p>
+		</footer>
+	</div>
+</span>
 </body>
-
-This is the BODY
-
-<footer>
-This is the FOOTER
-</footer>
-
 </html>
