Added another section

--- a/index.html
+++ b/index.html
@@ -35,18 +35,53 @@
       <section>
 <img class= "purebeauty" src="Images/purebeauty.png" style = "float: right" >
         <h3>Interest in Information Technology</h3>
-					<p>My interest in IT started in a rather indirect way and was not a very direct path. In 2012, I started studying an Associate Degree in Mechanical Engineering at RMIT after graduating high school. After initially deciding I immensely disliked Mechanical Engineering, I decided to double down and start yet another Associate degree in Civil  Engineering. I graduated after four years with two Engineering Degrees, and by this point, I had confirmed that Engineering was probably not something I enjoyed.</p>
-					<p></p>
-				</section>
+					<p>My interest in IT started in a round about way, I started studying an Associate Degree in Mechanical Engineering at RMIT in 2012 after graduating high school. After two years of study I managed to confirm that I immensely dislike Mechanical Engineering. So, I decided to double down and start another Associate degree in Civil Engineering. After another two years of study I graduated with two Associate Degrees and had confirmed that Engineering may not be the sort of thing I enjoy.</p>
+          		<p> After graduating I lived abroad in Asia, Europe and most recently, North America, where I was working in the Canadian Rockies at a backcountry lodge, taking people on hiking tours in summer and cross-country skiing in winter. When the Covid-19 pandemic hit, I decided to return to Australia when the company I was working for was forced to close its doors and could no longer sponsor my visa. </p>
+              		<p> When I was living in Hanoi, working as an English teacher was where my interest in IT was first sparked. The community of expats in my area were a mix of different professionals, and a small group of them worked in IT; Programmers, Web developers, and other consultants who all had the ability to work remotely and travel to different parts of the world. Seeing the freedom their roles allowed them was very intriguing and I began to consider the possibility of  a future in IT. </p>
+                  		<p> When I had to relocate back to Melbourne this year, a friend suggested that I apply for an entry level job at their Telcom company, Aussie Broadband. Despite having very little knowledge and no experience in the industry I got a Customer service Sales position. Shortly after starting I was transitioned to working remotely in response to the growing COVID-19 restrictions. Working from home reminded me of the expats in Hanoi, some of who have continued living abroad throughout the pandemic and have managed to maintain stability in their jobs.  </p>
+                      		<p>Even though my experience of working remotely is from a desk in my flat and not Hanoi, it has me considering a career in IT and how I could expand my role within Aussie Broadband, or even shape a future career around the lifestyle I enjoy, that is challenging, interesting  and secure.  </p>
+                          		<p> I started to take free Programming courses through EDX and Code Academy, as I had always found programming languages interesting and engaging. When the Federal government announced the COVID-19 Undergraduate Certificate courses, I saw that RMIT was offering an Undergraduate certificate in Information Technology. Having been a student at RMIT before, it seemed a natural fit to jump back into higher education to start exploring my options for a career in IT. I am hoping this certificate will give me a broad base of IT knowledge, and better idea of what my options could be moving forward. </p>
+
+
+    		</section>
 				<section>
-					<h3>Ideal Job</h3>
-					<p> Ideal Job </p>
-				</section>
+          <center>
+          <h2 style="color:#993B27"> Ideal Job</h2>
+          </center>
+          <h3>Web link:</h3>
+	<p> https://au.indeed.com/viewjob?cmp=New-Market-Leader&t=Full+Stack+Developer+Net+Python&jk=e80aedd8f3e52a82&sjdu=8EWtruxy728tzxKcUmN0cbCMTN6TBlbqwSiHGWKXUH1qIUFctEsMxW-LDDbvfupW7pYqY_NpKuWR3wbtrpDDWNYCg6Ze9YLKcjSUekXKlCI&tk=1efatj67285gs800&adid=345485660&pub=4a1b367933fd867b19b072952f68dceb&vjs=3 </p>
+<img class= "Screengrabone"  src="Images/Job Screen Grab Part one.png" style = "float: left" >
+<img class= "Screengrabtwo"  src="Images/Job Screen Grab part two.png" style = "float: right" >
+<p><b>(Full Stack Developer | .NET | Python - Melbourne VIC 3030 - Indeed.com, 2020)</b> </p>
+
+        </section>
 
 				<section>
-					<h3>Personal Profile</h3>
-					<p>Oersonal Profile Stuff </p>
-				</section>
+					<h3>Job Description</h3>
+					<p>This job is for a Remote Full stack developer. Full stack developers are programmers that are proficient in both front and back end coding and know a variety of different coding languages. Working as a full stack developer, I feel the work is a little more varied and interesting then focusing on front end or back end individually.  I feel that working across multiple projects, and being involved in different aspects of each one, would be challenging and interesting. This position is also one which can be fulfilled remotely. The freedom to work wherever I choose within Australia and make my own hours is very appealing, as I have always performed best when I can work to a set deadline at times that are most suitable to me.  </p>
+          <p> The requirements for this position are quite broad and could be suitable for a wide range of people; from recent graduates, to others with several years of industry experience.  It asks that candidates ideally have two years of relevant experience and an IT degree, but also indicates that “graduates who can demonstrate excellent skills” would be considered as well. The advertisement also states both the industry experience and a bachelor’s degree are preferred, but not essential. </p>
+          <p>Along with education and experience requirements, this job also requires candidates to have the following skill sets, and be competent in a variety of different of programing languages:</p>
+          <ul>
+
+            <h4>Skill Sets</h4>
+
+         				<li>	Analytical problem-solving </li>
+         				<li>	Written and verbal communication</li>
+                	<li>	Ability to work autonomously </li>
+
+                  <h4>Language Competencies </h4>
+
+                  <li>	Angular 7/8/9 </li>
+                  <li>	React</li>
+                    <li>	HTML, CSS</li>
+                    <li>PostgreSQL </li>
+                    <li>C#, .NET Core 2/3</li>
+                      <li>	Entity Framework Core </li>
+                      <li>LINQ </li>
+                    </section>
+
+                    <section>
+           	<h3>Career Plan</h3>
 			</section>
 
       <center>
@@ -59,8 +94,9 @@
       <img class= "BitcoinPeakPrice" src="Images/BitcoinPeak.png" style = "float: left" >
 
 
-        <p>My interest in IT started in a rather indirect way and was not a very direct path. In 2012, I started studying an Associate Degree in Mechanical Engineering at RMIT after graduating high school. After initially deciding I immensely disliked Mechanical Engineering, I decided to double down and start yet another Associate degree in Civil  Engineering. I graduated after four years with two Engineering Degrees, and by this point, I had confirmed that Engineering was probably not something I enjoyed.  </p>
 
+        <p>My project idea is for a series of banking tools and systems, with the purpose of simplifying the use of cryptocurrency in everyday life, to help encourage more widespread adoption of this technology. Ideally, this would be developed in conjunction with an existing financial institution, and integrated into their existing services, however it would potentially work as a stand-alone platform if required.   </p>
+<p> The first Cryptocurrency, Bitcoin, was first developed in 2008 . <b> (A brief history on Bitcoin & Cryptocurrencies | Ledger, 2020) </b> Since this introduction over 10 years ago, the industry has grown to include more than 1500 cryptocurrencies on the market today. <b> (List of All Current Cryptocurrencies, 2020) </b>The marker has grown vastly, and Bitcoin particularly has gone through multiple stages of exponential growth in value, reaching and all time high of $28009.15 AUD in December 2017.  The first Cryptocurrency, Bitcoin, was first developed in 2008 . <b> (A brief history on Bitcoin & Cryptocurrencies | Ledger, 2020) </b> Since this introduction over 10 years ago, the industry has grown to include more than 1500 cryptocurrencies on the market today. <b> (List of All Current Cryptocurrencies, 2020) </b>The marker has grown vastly, and Bitcoin particularly has gone through multiple stages of exponential growth in value, reaching and all time high of $28009.15 AUD in December 2017.  <b> (Bitcoin Price Chart (BTC) | Coinbase, 2020) </b>  </p>
       </section>
       <section>
         <h3>Description and Limitations</h3>
@@ -88,7 +124,8 @@
     <p> Locke, T., 2020. Mark Cuban: This Is What It Would Take For Me To Change My Mind About Bitcoin. [online] CNBC. Available at: <https://www.cnbc.com/2020/04/15/what-it-would-take-for-mark-cuban-to-change-his-mind-about-bitcoin.html> [Accessed 15 August 2020]. </p>
       <p>  Au.indeed.com. 2020. Full Stack Developer | .NET | Python - Melbourne VIC 3030 - Indeed.Com. [online] Available at: <https://au.indeed.com/viewjob?cmp=New-Market-Leader&t=Full+Stack+Developer+Net+Python&jk=e80aedd8f3e52a82&sjdu=8EWtruxy728tzxKcUmN0cbCMTN6TBlbqwSiHGWKXUH1qIUFctEsMxW-LDDbvfupW7pYqY_NpKuWR3wbtrpDDWNYCg6Ze9YLKcjSUekXKlCI&tk=1efatj67285gs800&adid=345485660&pub=4a1b367933fd867b19b072952f68dceb&vjs=3> [Accessed 15 August 2020]. </p>
         <p> Mallory. 2020. Information Technology Jobs Descriptions. [online] Available at: <https://mallory.com.au/information-technology-jobs-descriptions/> [Accessed 15 August 2020]. </p>
-		<footer>
+<P> coinmarketcap.com. 2020. List Of All Current Cryptocurrencys. [online] Available at: <https://coinmarketcap.com/all/views/all/-number> [Accessed 15 August 2020].
+    <footer>
 <p style="color:#993B27" >Anthony Thomas, s3383776</p>
 		</footer>
 	</div>
