--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 
                     <section>
            	<h3>Career Plan</h3>
+            <p> Currently I have a tiny bit of experience in programing in HTML, CSS, Python and Java, and would obtain other relevant/required skills would be to progress from an Undergraduate Certificate into a Bachelors of IT. I would ideally transition to working part-time with Aussie broadband while looking out for internal education opportunities that would be relevant to me. One opportunity that would be incredibly beneficial to building skills and gaining industry experience would be working towards a secondment in another department; Ideally the in-house development team, the IT department, or even as a project officer. As I progress through my bachelor’s degree, I would continue to take on short courses in a variety of coding languages to increase my employability, and when I was confident and competent enough in several of these, I would begin working on my own programming projects to build up a portfolio, and hopefully within 18-24 months I am able to reach this point.</p>
+      	</section>
 			</section>
 
       <center>
