--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <body style="background-color:Aliceblue;">
      <span style ="font-family: sans-serif">
   <meta name="Anthony Thomas" content="s3383776">
+  <meta original template = "(e07593/e07593BasicTemplate, 2020)">
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -41,6 +42,39 @@
                   		<p> When I had to relocate back to Melbourne this year, a friend suggested that I apply for an entry level job at their Telcom company, Aussie Broadband. Despite having very little knowledge and no experience in the industry I got a Customer service Sales position. Shortly after starting I was transitioned to working remotely in response to the growing COVID-19 restrictions. Working from home reminded me of the expats in Hanoi, some of who have continued living abroad throughout the pandemic and have managed to maintain stability in their jobs.  </p>
                       		<p>Even though my experience of working remotely is from a desk in my flat and not Hanoi, it has me considering a career in IT and how I could expand my role within Aussie Broadband, or even shape a future career around the lifestyle I enjoy, that is challenging, interesting  and secure.  </p>
                           		<p> I started to take free Programming courses through EDX and Code Academy, as I had always found programming languages interesting and engaging. When the Federal government announced the COVID-19 Undergraduate Certificate courses, I saw that RMIT was offering an Undergraduate certificate in Information Technology. Having been a student at RMIT before, it seemed a natural fit to jump back into higher education to start exploring my options for a career in IT. I am hoping this certificate will give me a broad base of IT knowledge, and better idea of what my options could be moving forward. </p>
+
+
+                                  		</section>
+                              				<section>
+                                        <center>
+                                        <h2 style="color:#993B27"> Personal Profile</h2>
+                                        </center>
+                                        <h3>Test Results</h3>
+                                        <li> <b>Learning Style: </b> http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=4&V=8&T=8 </li>
+                                        <img class= "learrningstyle"  src="Images/LearningStyle.png" style = "float: left" >
+                                         <p> The results from my Learning Style Test <b> (What's Your Learning Style? 20 Questions, 2020) </b> broke down my learning style into 20% Auditory, 40% Visual, and 40% tactile. This suggests that I learn most effectively by touching and doing, or reading, viewing graphs, and using images. This is consistent with how I have always found myself most engaged when learning new things, and I feel that I have always been mostly a tactile learner more than any other kind.
+When I form groups in the future, it would be wise for me to team up with people who are more auditory and visual learners than myself, as they might notice things I have missed, and our strengths and weakness would compliment each other. </p>
+                                        <li> <b> Personality Type:</b> https://www.16personalities.com/entp-personality</li>
+                                        <img class= "PersonalityType"  src="Images/PersonalityType.png" style = "float: right" >
+                                        <img class= "PersonalityTypeResult"  src="Images/PersonalityTypeResult.png" style = "float: left" >
+
+                                        <p>The results from my Personality Type test <b> ((Introduction | Debater (ENTP) Personality | 16Personalities, 2020)</b> suggest that I am armed with a powerful intellect and vivid imagination. This is consistent with how I have always felt about myself. The test listed some of my strengths as Energetic, Charismatic, Original and Knowledgeable and some of my weaknesses as Can Find It Difficult to Focus, Insensitive, Very Argumentative and said I have a Dislike for Practical Matters.
+The profile suggest that I am most effective in the initial stages of a project when brain storming and when we get stuck on an interesting and challenging problem. It also says I can be polarizing in a group environment. Especially when dealing with task-orientated group members. Taking this information into considering when forming groups in the future I feel like I would be best paired with task-orientated people as I tend to think about the big picture of projects and not the small details. I would also have to be cautious on how I behave in a group setting because many other personality types can find me abrasive or insensitive, as I have a tendency to criticize  ideas that I cant see the merit In.
+ </p>
+ <p>               </p>
+
+ <p>               </p>
+
+                                        <li> <b> Leadership Style:</b> https://www.mindtools.com/pages/article/leadership-style-quiz.htm</li>
+                                        <img class=leadershipstyle ""  src="Images/LeadershipStyle.png" style = "float: left" >
+                                        <p>
+The results from my Leadership style test <b> (What's Your Leadership Style?: – Learn About the Strengths and Weaknesses of the Way You Like to Lead, 2020)</b> suggest that I have  a authoritarian and autocratic  leadership type. This is a little contradictory to how I feel I normally behave in a group. The results suggest the outcome of my leaderhipe style can have a lot of negative effects  <i> However, you'll likely demoralize, demotivate and aggravate people if you use it all the time. This can translate into high absenteeism and turnover rates. You'll also miss out on a wealth of ideas, thereby stifling innovation and creativity. Read more below.</i> <b> (What's Your Leadership Style?: – Learn About the Strengths and Weaknesses of the Way You Like to Lead, 2020)</b>.
+I have always felt I have been very open to ideas when participating in group work. I like to bounce off other people’s ideas as other people often have different perspectives that I may not consider. This is not a trait that an autocratic leader hold. However, when there has been a approaching group dead line In the past that I needed to work towards. I have taken some of the traits of an Autocratic leader.
+If I was to form a group and take the autocratic leadership style I feel the group would best filled with weak minders worker bee type that I could dictate my demands to and use the natural powerful ilntellecct I have as an ENTP to crush there souls and rule the group with an  iron fist. This method would only be sustainable for a short time as I feel not many people would want to particapte in group work with me more then once. But we would probably achieve any deadline we have been set.
+ </p>
+
+
+                              <p><b></b> </p>
 
 
     		</section>
@@ -94,25 +128,44 @@
     <section>
       <h3>Overview and Motivation</h3>
       <img class= "BitcoinPeakPrice" src="Images/BitcoinPeak.png" style = "float: left" >
-
+      <p><b>(Bitcoin Price Chart (BTC) | Coinbase, 2020)</b></p>
 
 
         <p>My project idea is for a series of banking tools and systems, with the purpose of simplifying the use of cryptocurrency in everyday life, to help encourage more widespread adoption of this technology. Ideally, this would be developed in conjunction with an existing financial institution, and integrated into their existing services, however it would potentially work as a stand-alone platform if required.   </p>
-<p> The first Cryptocurrency, Bitcoin, was first developed in 2008 . <b> (A brief history on Bitcoin & Cryptocurrencies | Ledger, 2020) </b> Since this introduction over 10 years ago, the industry has grown to include more than 1500 cryptocurrencies on the market today. <b> (List of All Current Cryptocurrencies, 2020) </b>The marker has grown vastly, and Bitcoin particularly has gone through multiple stages of exponential growth in value, reaching and all time high of $28009.15 AUD in December 2017.  The first Cryptocurrency, Bitcoin, was first developed in 2008 . <b> (A brief history on Bitcoin & Cryptocurrencies | Ledger, 2020) </b> Since this introduction over 10 years ago, the industry has grown to include more than 1500 cryptocurrencies on the market today. <b> (List of All Current Cryptocurrencies, 2020) </b>The marker has grown vastly, and Bitcoin particularly has gone through multiple stages of exponential growth in value, reaching and all time high of $28009.15 AUD in December 2017.  <b> (Bitcoin Price Chart (BTC) | Coinbase, 2020) </b>  </p>
-      </section>
-      <section>
-        <h3>Description and Limitations</h3>
-        <p> Description and Limitations</p>
-      </section>
+<p> The first Cryptocurrency, Bitcoin, was first developed in 2008 . <b> (A brief history on Bitcoin & Cryptocurrencies | Ledger, 2020) </b> Since this introduction over 10 years ago, the industry has grown to include more than 1500 cryptocurrencies on the market today. <b> (List of All Current Cryptocurrencies, 2020) </b>The marker has grown vastly, and Bitcoin particularly has gone through multiple stages of exponential growth in value, reaching and all time high of $28009.15 AUD in December 2017.  The first Cryptocurrency, Bitcoin, was first developed in 2008 . <b> (A brief history on Bitcoin & Cryptocurrencies | Ledger, 2020) </b> Since this introduction over 10 years ago, the industry has grown to include more than 1500 cryptocurrencies on the market today. <b> (List of All Current Cryptocurrencies, 2020) </b>The marker has grown vastly, and Bitcoin particularly has gone through multiple stages of exponential growth in value, reaching and all time high of $28009.15 AUD in December 2017.  <b> (Bitcoin Price Chart (BTC) | Coinbase, 2020) </b>
+ </p>
 
+<p> Despite the massive increase in volume and value of cryptocurrency in recent years, we are yet to see widespread adoption of it as a form of currency to be used in day-to-day life. A report from the Cybersecurity firm Kaspersky found that 81% of people surveyed have never purchased cryptocurrency, and only 6% of people are currently using them.  One of the major reasons the lack of widespread adoption suggested is due to the knowledge gap average people have on how to use Cryptocurrency, and a narrow understanding of the technology it uses. <b> (Uncharted territory: why consumers are still wary about adopting cryptocurrency, 2020)</b>
+</p>
+<p> Mark Cuban has been a long-time critic of cryptocurrency, reasoning that one of the major limiting factors on widespread adoption of it, is that it is simply too hard to use. CSNBC quotes an interview with  Cuban From episode 270 of  the Pomp Podcast on April 2020 saying “It would have to be completely friction-free and understandable by everybody first.” So easy, in fact, that “grandma could do it.” “You’ve got to be able to spend it, because right now you still have to convert it for anything that you want. And as long as you have to convert it, you’re still dependent on fiat. No matter what you say,” . <b>(Locke, 2020)</b>  </p>
+
+      </section>
       <section>
-        <h3>Tools Technologies and Skill Required </h3>
-        <p>Tools Technologies and Skill Required </p>
+        <h3>Project Description</h3>
+        <p> The project would aim to achieve a more widespread use of cryptocurrencies by drastically simplifying the process of transaction with them, as well as incentivising people to hold their wealth in cryptocurrency instead of current popular investment choices. This project would be most effective if it was able to partner with an existing trusted financial institution, such as ING or HSBC. The project could potentially work as a stand-alone platform but there would be significant obstacles to overcome. Partnering with an existing financial institution would add a level of creditability to cryptocurrency and gain trust from customers who may not view it is a legitimate way of performing financial transaction and introduce people who are simply unfamiliar with the technology. This would also help change the very common perception that cryptocurrency is something that “nerds” use, or that it is used exclusively for the purchase nefarious and illegal products/services on the dark web.
+         </p>
+        <p> Currently, if somebody wants to make a transaction using cryptocurrency, it is a clunky, tedious, multi-step process. Firstly, the user must purchase their chosen currency, normally through a trading platform, which normally involves putting in credit card details or doing a manual bank transfer to a third party who then passes the money to the trading platform.  After this, the purchased currency is transferred to the users soft or hard crypto wallet, and to set up the wallet itself is also tedious often involving a third party. This is far more effort than most people would be willing to go through to conduct a simple transaction. To combat this, our partnering financial institution would be able to implement a series of systems and tools in their existing services and provide consumers with a more streamlined process to use their cryptocurrencies.</p>
+        <p> The first step would be to assign each user a crypto wallet, which the bank would handle and maintain all security infrastructure for. If a user already had a crypto wallet, there would be a feature to integrate their current wallet into the system, as well as an option to open additional wallets, much like opening multiple bank accounts under one name. As well as this, customers would now have the incentive of earning interest on the balance of a crypto wallet in the same way their ordinary savings accounts do.</p>
+        <p> Making transactions using cryptocurrency would become seamless once the correct systems where introduced, with the ability to convert fiat (government-backed currency like AUD) into cryptocurrency, and vice versa, through your banking app or preferred banking method, much like transferring money from a chequing account to a savings account. This could be easily integrated into consumers daily purchases, for example, when buying your morning coffee with a debit or credit card, you would simply be offered an additional payment option: “Cheque, Savings, Credit or Crypto?” </p>
+        <p> This system could potentially be extended into a trading platform as well, that would allow people to purchase stock bonds and other investments using cryptocurrency directly, without having to transfer it into fiat. As time progressed, the systems would be refined, and more features would be added. </p>
+
+      </section>
+      <section>
+        <h3>Obstacles and Limitations  </h3>
+        <p>One of the biggest obstacles in getting this project running would be gaining partnership with a trusted and legitimate financial intuition, who are interested and willing to back the concept. Without being partnered with a bank, instead being operated as a standalone platform, this project could be perceived as lacking legitimacy or security by everyday users and may get lost in the noise of other services and trading platforms. </p>
+        <p>If developed as a stand-alone platform, the project would be less viable, but not impossible to implement. There would simply be more obstacles to overcome - particularly acquiring the enormous amount of money required to build what would essentially become a bank largely dedicated to dealing with cryptocurrency.  </p>
+
+        <p>Once this project was off the ground, it would need the expertise of people from a series of professionals within the finance, telcom and IT industries. The skills required of the IT professionals particularly would vary greatly because of the many facets the project would have while being implemented. It would require data analysts, cyber security specialists, full stack developers, and more. All the hardware required to implement this project is readily available today, and if partnering with an existing financial institution was successful, they would already have most of the tools and professionals with skills required to integrate these tools and systems. Existing banking software and apps could be modified to have these features instead of being developed from scratch. </p>
+
+      </section>
+      <section>
+        <h3>Tools, Technologies and Skill Required </h3>
+        <p>If you were a Full Stack Developer on this project, you would use a variety of tools, such as GitHub as a development platform, Slack, to communicate with people you are working with, MySQL, and many others. You would need to be competent in a variety of programming languages, such as python, JavaScript, CSS, etc. </p>
       </section>
     </section>
     <section>
       <h3>Outcome </h3>
-      <p> Outcome stuff </p>
+      <p>If this project was successfully implemented, either as a stand-alone platform or in conjunction with a financial institution, the complication involved in using cryptocurrency would become frictionless and streamlined. We would see faster and more widespread adoption of cryptocurrency, and over time the perception of it would begin to change as more people used it their everyday lives. If enough people started to adopt cryptocurrencies as a preferred method of payment or making transactions, it would shift the current financial system to be more decentralised. </p>
     </section>
   </section>
 
@@ -127,6 +180,11 @@
       <p>  Au.indeed.com. 2020. Full Stack Developer | .NET | Python - Melbourne VIC 3030 - Indeed.Com. [online] Available at: <https://au.indeed.com/viewjob?cmp=New-Market-Leader&t=Full+Stack+Developer+Net+Python&jk=e80aedd8f3e52a82&sjdu=8EWtruxy728tzxKcUmN0cbCMTN6TBlbqwSiHGWKXUH1qIUFctEsMxW-LDDbvfupW7pYqY_NpKuWR3wbtrpDDWNYCg6Ze9YLKcjSUekXKlCI&tk=1efatj67285gs800&adid=345485660&pub=4a1b367933fd867b19b072952f68dceb&vjs=3> [Accessed 15 August 2020]. </p>
         <p> Mallory. 2020. Information Technology Jobs Descriptions. [online] Available at: <https://mallory.com.au/information-technology-jobs-descriptions/> [Accessed 15 August 2020]. </p>
 <P> coinmarketcap.com. 2020. List Of All Current Cryptocurrencys. [online] Available at: <https://coinmarketcap.com/all/views/all/-number> [Accessed 15 August 2020].
+<p>  Ledger. 2020. A Brief History On Bitcoin & Cryptocurrencies | Ledger. [online] Available at: <https://www.ledger.com/academy/crypto/a-brief-history-on-bitcoin-cryptocurrencies> [Accessed 15 August 2020].<p/>
+<p> Educationplanner.org. 2020. What's Your Learning Style? 20 Questions. [online] Available at: <http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=4&V=8&T=8> [Accessed 14 August 2020].<p/>
+  <P> 16Personalities. 2020. Introduction | Debater (ENTP) Personality | 16Personalities. [online] Available at: <https://www.16personalities.com/entp-personality> [Accessed 16 August 2020].<p/>
+  <P>Mindtools.com. 2020. What's Your Leadership Style?: – Learn About The Strengths And Weaknesses Of The Way You Like To Lead. [online] Available at: <https://www.mindtools.com/pages/article/leadership-style-quiz.htm> [Accessed 16 August 2020]. </P>
+<p> GitHub. 2020. E07593/E07593basictemplate. [online] Available at: <https://github.com/e07593/e07593BasicTemplate> [Accessed 16 August 2020]. <p/>
     <footer>
 <p style="color:#993B27" >Anthony Thomas, s3383776</p>
 		</footer>
